--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,24 +16,6 @@
         <item name="android:fontFamily">@font/avocado_creamy</item>
     </style>
 
-    <!-- STYLE SIGN-IN ACTIVITY -->
-    <style name="LoginTheme" parent="AppTheme">
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorButtonNormal">@color/colorAccent</item>
-        <item name="colorControlNormal">@android:color/darker_gray</item>
-        <item name="colorControlActivated">@android:color/darker_gray</item>
-        <item name="colorControlHighlight">@android:color/darker_gray</item>
-        <item name="android:textColor">@android:color/white</item>
-        <item name="android:textColorPrimary">@android:color/darker_gray</item>
-        <item name="android:textColorSecondary">@android:color/darker_gray</item>
-        <item name="android:windowBackground">@android:color/white</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
-        <item name="android:textColorHint">@android:color/white</item>
-    </style>
-
 
     <style name="TapEditText" parent="Widget.AppCompat.EditText">
         <item name="android:textColor">@color/black_three</item>
@@ -44,6 +26,14 @@
         <item name="android:textColorHint">@color/colorGrey</item>
         <item name="android:layout_height">50dp</item>
 
+    </style>
+
+    <style name="ButtonFacebook" parent="Base.TextAppearance.AppCompat.Button" >
+        <item name="backgroundTint">@color/Facebook</item>
+    </style>
+
+    <style name="ButtonGoogle" parent="Base.TextAppearance.AppCompat.Button" >
+        <item name="backgroundTint">@color/Google</item>
     </style>
 
     <style name="TapEditTextMultiline" parent="Widget.AppCompat.EditText">
