--- a/app/src/main/res/layout/activity_my_grocery_list.xml
+++ b/app/src/main/res/layout/activity_my_grocery_list.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <!-- Toolbar -->
@@ -14,7 +15,7 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="TBL: GROCERY"
+        tools:text="TBL: GROCERY"
         android:visibility="gone" />
 
     <androidx.core.widget.NestedScrollView
