--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -12,9 +12,11 @@
         android:id="@+id/topTextview"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimaryLight"
         android:gravity="center"
         android:padding="15dp"
+        android:textColor="@color/black_three"
+        android:textStyle="bold"
+        android:background="@drawable/border_yellow"
         tools:text="TBL: Number of recipes"
         android:visibility="visible"
         />
@@ -24,7 +26,7 @@
         android:id="@+id/not_found"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TBL: ALL RECIPES"
+        tools:text="TBL: ALL RECIPES"
         android:visibility="visible"
         android:gravity="center"/>
 
