--- a/app/src/main/res/layout/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout/fragment_my_ingredients_list.xml
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="TBL: INGREDIENTS"
+        tools:text="TBL: INGREDIENTS"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
