--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -12,9 +12,11 @@
         android:id="@+id/topTextview"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/colorPrimaryLight"
         android:gravity="center"
-        android:padding="15dp"
+        android:padding="5dp"
+        android:textColor="@color/black_three"
+        android:textStyle="bold"
+        android:background="@drawable/border_yellow"
         tools:text="TBL: Number of recipes"
         android:visibility="visible" />
 
@@ -22,7 +24,7 @@
         android:id="@+id/not_found"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="TBL: MY RECIPES"
+        tools:text="TBL: MY RECIPES"
         android:visibility="gone"
         android:gravity="center"
         />
