--- a/app/src/main/res/layout-v21/item_recipes_list_database.xml
+++ b/app/src/main/res/layout-v21/item_recipes_list_database.xml
@@ -68,6 +68,7 @@
             android:text="@string/recipe_list_item_matching"
             android:textStyle="bold"
             android:gravity="center"
+            android:elevation="1dp"
             android:background="@drawable/border_green"
             android:textColor="@color/colorWhite"
             app:layout_constraintRight_toRightOf="parent"
@@ -116,6 +117,7 @@
             android:layout_height="48dp"
             android:adjustViewBounds="true"
             android:scaleType="fitCenter"
+            android:elevation="1dp"
             android:layout_marginTop="@dimen/default_margin"
             app:layout_constraintRight_toRightOf="@id/view"
             app:layout_constraintTop_toTopOf="@id/view"
@@ -151,7 +153,7 @@
             android:layout_marginTop="@dimen/default_margin"
             android:layout_marginStart="@dimen/default_margin"
             android:layout_marginEnd="@dimen/default_margin"
-            android:text="@string/tiret"
+            android:text="-"
             android:textSize="12sp"
             app:layout_constraintStart_toEndOf="@id/fragment_recipes_list_cuisine_type"
             app:layout_constraintTop_toBottomOf="@id/like_number_image"
