--- a/app/src/main/res/layout-v21/item_recipes_list_retrofit.xml
+++ b/app/src/main/res/layout-v21/item_recipes_list_retrofit.xml
@@ -68,6 +68,7 @@
                 android:text="@string/recipe_list_item_matching"
                 android:textStyle="bold"
                 android:gravity="center"
+                android:elevation="1dp"
                 android:background="@drawable/border_green"
                 android:textColor="@color/colorWhite"
                 app:layout_constraintRight_toRightOf="parent"
@@ -139,7 +140,7 @@
                 android:layout_marginTop="@dimen/default_margin"
                 android:layout_marginStart="@dimen/default_margin"
                 android:layout_marginEnd="@dimen/default_margin"
-                android:text="@string/tiret"
+                android:text="-"
                 android:textSize="12sp"
                 app:layout_constraintStart_toEndOf="@id/fragment_recipes_list_cuisine_type"
                 app:layout_constraintTop_toBottomOf="@id/like_number_image"
