--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:clickable="true"
     android:focusable="true"
-    android:background="@color/colorWhite">
+    >
 
     <ImageView
         android:id="@+id/image"
@@ -28,7 +28,7 @@
         android:layout_marginTop="@dimen/default_margin"
         android:text="@string/app_name"
         android:fontFamily="@font/avocado_creamy"
-        android:textSize="@dimen/default_extra_large_margin"/>
+        android:textSize="30sp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
