--- a/app/src/main/res/layout/dialog_fullscreen_add_photo.xml
+++ b/app/src/main/res/layout/dialog_fullscreen_add_photo.xml
@@ -3,7 +3,6 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/search_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -24,7 +23,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <RelativeLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
 
@@ -32,8 +31,10 @@
                 android:id="@+id/close_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginStart="8dp"
+                android:layout_gravity="center"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="@string/description_image"
                 android:padding="8dp"
@@ -43,8 +44,10 @@
             <TextView
                 android:id="@+id/dialogTitle"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintLeft_toRightOf="@id/close_button"
                 android:layout_marginStart="8dp"
                 android:layout_toEndOf="@id/close_button"
                 android:text="@string/photo_dialog"
@@ -54,9 +57,10 @@
             <TextView
                 android:id="@+id/validate_button"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentEnd="true"
-                android:layout_centerVertical="true"
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
                 android:layout_marginStart="8dp"
                 android:text="@string/publish"
                 android:textAllCaps="true"
@@ -64,7 +68,7 @@
                 android:textColor="@color/black_three"
                 android:textSize="17sp" />
 
-        </RelativeLayout>
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
@@ -90,7 +94,8 @@
                 style="@style/TapEditText"
                 android:layout_width="match_parent"
                 android:hint="@string/title_photo"
-                android:inputType="text" />
+                android:inputType="text"
+                android:importantForAutofill="no" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -104,7 +109,8 @@
             android:layout_marginBottom="30dp"
             app:layout_constraintEnd_toEndOf="@id/titleTIL"
             app:layout_constraintStart_toStartOf="@id/titleTIL"
-            app:layout_constraintTop_toBottomOf="@id/titleTIL"/>
+            app:layout_constraintTop_toBottomOf="@id/titleTIL"
+            android:contentDescription="@string/description_image" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
