--- a/app/src/main/res/layout/dialog_image.xml
+++ b/app/src/main/res/layout/dialog_image.xml
@@ -3,7 +3,6 @@
     android:layout_height="0dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/relativeLayout2"
-    android:background="@color/colorWhite"
     app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
@@ -14,5 +13,6 @@
     <ImageView
         android:id="@+id/your_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:contentDescription="@string/description_image"/>
 </RelativeLayout>
