--- a/app/src/main/res/layout/item_recipe_detail_list_expandable_group.xml
+++ b/app/src/main/res/layout/item_recipe_detail_list_expandable_group.xml
@@ -10,6 +10,7 @@
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingEnd="0dp"
         android:textColor="@android:color/black"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
