--- a/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
+++ b/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingEnd="0dp"
         android:paddingTop="10dp"
         android:paddingBottom="10dp" />
 </LinearLayout>
