--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -29,7 +29,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toBottomOf="@id/nav_header_app_name"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:gravity="left">
+        android:gravity="start">
 
         <ImageView
             android:id="@+id/nav_header_profile_image"
