--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -30,7 +30,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_large_margin"
             android:contentDescription="@string/description_image"
-            app:layout_constraintStart_toStartOf="@id/title"
+            android:layout_marginStart="15dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@drawable/ic_anon_user_48dp" />
 
@@ -70,24 +71,29 @@
             android:layout_marginTop="@dimen/default_margin"
             text:tools="@string/recipe_list_item_label"
             android:textStyle="bold"
-            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/profile_image"
             app:layout_constraintRight_toRightOf="parent"/>
 
-
-
-
-        <ImageButton
-            android:id="@+id/like_number_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            android:contentDescription="@string/recipe_list_item_image"
+        <com.like.LikeButton
+            android:id="@+id/like_number_image2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:icon_type="thumb"
+            app:circle_start_color="@color/colorPrimary"
+            app:like_drawable="@drawable/thumb_on"
+            app:unlike_drawable="@drawable/thumb_off"
+            app:dots_primary_color="@color/colorAccent"
+            app:dots_secondary_color="@color/colorPrimary"
+            app:circle_end_color="@color/colorAccent"
+            app:icon_size="25dp"
+            app:liked="false"
+            app:anim_scale_factor="2"
+            app:is_enabled="true"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/image"
             android:layout_marginTop="@dimen/default_large_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/title"
-            app:srcCompat="@drawable/ic_like_enable"
-            android:background="?android:selectableItemBackground"
             />
 
 
@@ -98,7 +104,8 @@
             android:contentDescription="@string/description_image"
             app:layout_constraintTop_toTopOf="@id/username"
             app:layout_constraintBottom_toBottomOf="@id/username"
-            app:layout_constraintRight_toRightOf="@id/title"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
             app:srcCompat="@drawable/ic_delete_black_24dp"
             android:tint="@color/black_three"
             android:background="?android:selectableItemBackground"
@@ -108,26 +115,29 @@
             android:id="@+id/update_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginEnd="25dp"
             android:contentDescription="@string/description_image"
             app:layout_constraintTop_toTopOf="@id/profile_image"
             app:layout_constraintBottom_toBottomOf="@id/profile_image"
             app:layout_constraintRight_toLeftOf="@id/delete_button"
             app:srcCompat="@drawable/ic_update_black_24dp"
+            android:layout_marginEnd="10dp"
             android:background="?android:selectableItemBackground"
             />
 
 
         <TextView
             android:id="@+id/like_number"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
 
             text:tools="@string/social_media_like_number_tips"
-            app:layout_constraintLeft_toRightOf="@id/like_number_image"
-            app:layout_constraintTop_toTopOf="@id/like_number_image"
-            app:layout_constraintBottom_toBottomOf="@id/like_number_image"/>
+            app:layout_constraintLeft_toRightOf="@id/like_number_image2"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
+
+            app:layout_constraintTop_toTopOf="@id/like_number_image2"
+            app:layout_constraintBottom_toBottomOf="@id/like_number_image2"/>
 
 
         <TextView
