--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -43,11 +43,10 @@
                 android:adjustViewBounds="true"
                 android:contentDescription="@string/description_image"
                 android:scaleType="centerCrop"
-                app:layout_constraintCircle="@id/activity_recipe_detail_kcal_image"
-                app:layout_constraintCircleAngle="15"
-                app:layout_constraintCircleRadius="120dp"
-                app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_kcal_image"
-                app:layout_constraintTop_toTopOf="@id/activity_recipe_detail_name"
+                android:layout_marginEnd="15dp"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_photo"
+                app:layout_constraintBottom_toBottomOf="@id/activity_recipe_detail_photo"
                 app:srcCompat="@drawable/ic_search_black_24dp" />
 
 
