--- a/app/src/main/res/layout/item_recipe_detail_list_expandable_group.xml
+++ b/app/src/main/res/layout/item_recipe_detail_list_expandable_group.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent">
     <TextView
         android:id="@+id/listTitle"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="?android:attr/expandableListPreferredItemPaddingLeft"
         android:paddingEnd="0dp"
