--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,13 +10,13 @@
 
     <ImageView
         android:id="@+id/image"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:srcCompat="@drawable/ic_fridge_splash"
+        app:srcCompat="@drawable/logo"
         android:contentDescription="@string/description_image" />
 
     <TextView
@@ -25,10 +25,10 @@
         app:layout_constraintTop_toBottomOf="@id/image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        android:layout_marginTop="@dimen/default_large_margin"
+        android:layout_marginTop="@dimen/default_margin"
         android:text="@string/app_name"
         android:fontFamily="@font/avocado_creamy"
-        android:textSize="50sp"/>
+        android:textSize="30sp"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
