hide facebook button, with covid my personal account is not veriied for the moment

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -65,6 +65,7 @@
                 android:padding="@dimen/default_large_margin"
                 android:text="@string/loginFacebook"
                 style="@style/ButtonFacebook"
+                android:visibility="gone"
                 />
 
             <!-- BUTTON LOGIN GOOGLE -->
