--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,10 +17,8 @@
         <ImageView
             android:layout_width="100dp"
             android:layout_height="100dp"
-
             android:layout_margin="@dimen/default_large_margin"
             android:scaleType="centerCrop"
-
             android:background="@drawable/logo"
             android:contentDescription="@string/description_image" />
 
@@ -65,7 +63,7 @@
                 android:padding="@dimen/default_large_margin"
                 android:text="@string/loginFacebook"
                 style="@style/ButtonFacebook"
-                android:visibility="gone"
+                android:visibility="visible"
                 />
 
             <!-- BUTTON LOGIN GOOGLE -->
@@ -74,7 +72,6 @@
                 android:text="@string/loginGoogle"
                 android:textColor="#fff"
                 android:textSize="@dimen/default_text_size"
-
                 android:layout_margin="@dimen/default_large_margin"
                 android:padding="@dimen/default_large_margin"
                 android:layout_width="match_parent"
