--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -139,7 +139,6 @@
             app:layout_constraintTop_toTopOf="@id/like_number_image2"
             app:layout_constraintBottom_toBottomOf="@id/like_number_image2"/>
 
-
         <TextView
             android:id="@+id/description"
             android:layout_width="0dp"
@@ -148,15 +147,12 @@
             android:layout_marginTop="@dimen/default_margin"
             text:tools="@string/social_media_description_tips_post"
             app:layout_constraintLeft_toLeftOf="@id/title"
-            app:layout_constraintRight_toRightOf="@id/title"
+            app:layout_constraintRight_toRightOf="parent"
+            android:layout_marginEnd="15dp"
             app:layout_constraintTop_toBottomOf="@id/title" />
-
-
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-
     </com.facebook.shimmer.ShimmerFrameLayout>
-
 
 </androidx.cardview.widget.CardView>
