--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorRed">#F44336</color>
     <color name="colorWhite">#FFFFFF</color>
     <color name="colorGrey">#B5B1B1</color>
+    <color name="whiteThree">#F7F7F7</color>
     <color name="transparent">#00FFFFFF</color>
     <color name="black_three">#232120</color>
 
