--- a/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/app/src/main/res/layout/activity_recipe_detail.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -12,211 +11,11 @@
         layout="@layout/toolbar" />
 
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/toolbar">
+        app:layout_constraintTop_toBottomOf="@id/view" />
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/default_large_margin"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/activity_recipe_detail_photo"
-                android:layout_width="match_parent"
-                android:layout_height="280sp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/description_image"
-                android:scaleType="centerCrop"
-
-                app:layout_constraintTop_toTopOf="parent" />
-
-
-            <!-- NAME AND OTHERS -->
-
-            <ImageView
-                android:id="@+id/activity_recipe_detail_photo_owner"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:adjustViewBounds="true"
-                android:contentDescription="@string/description_image"
-                android:scaleType="centerCrop"
-                android:layout_marginEnd="15dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_photo"
-                app:layout_constraintBottom_toBottomOf="@id/activity_recipe_detail_photo"
-                app:srcCompat="@drawable/ic_search_black_24dp" />
-
-
-            <TextView
-                android:id="@+id/activity_recipe_detail_name"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="15dp"
-                android:text="@string/recipe_detail_item_label"
-                android:textSize="16sp"
-                android:textStyle="bold"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_photo" />
-
-
-            <TextView
-                android:id="@+id/activity_recipe_total_time"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:text="@string/recipe_detail_item_total_time"
-                android:textSize="14sp"
-                app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_name"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_name" />
-
-            <ImageView
-                android:id="@+id/activity_recipe_detail_time_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="25dp"
-                android:layout_marginEnd="70dp"
-                android:contentDescription="@string/description_image"
-                app:layout_constraintRight_toLeftOf="@+id/activity_recipe_detail_number_person_image"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
-                app:srcCompat="@drawable/ic_detail_timer_black_24dp" />
-
-            <TextView
-                android:id="@+id/activity_recipe_detail_time_image_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="@string/recipe_detail_item_detail_time"
-                android:textColor="@color/colorGrey"
-                android:textStyle="bold"
-                android:textSize="11sp"
-                app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_time_image"
-                app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_time_image"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_time_image" />
-
-            <ImageView
-                android:id="@+id/activity_recipe_detail_number_person_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="25dp"
-                android:contentDescription="@string/description_image"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
-                app:srcCompat="@drawable/ic_detail_number_person_24dp" />
-
-            <TextView
-                android:id="@+id/activity_recipe_detail_number_person_image_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="@string/recipe_detail_item_number_person"
-                android:textColor="@color/colorGrey"
-                android:textStyle="bold"
-                android:textSize="11sp"
-                app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_number_person_image"
-                app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_number_person_image"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_number_person_image" />
-
-            <ImageView
-                android:id="@+id/activity_recipe_detail_kcal_image"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="70dp"
-                android:layout_marginTop="25dp"
-                android:contentDescription="@string/description_image"
-                app:layout_constraintLeft_toRightOf="@+id/activity_recipe_detail_number_person_image"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_total_time"
-                app:srcCompat="@drawable/ic_detail_kcal_24dp" />
-
-            <TextView
-                android:id="@+id/activity_recipe_detail_kcal_image_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:gravity="center"
-                android:text="@string/recipe_detail_item_kcal"
-                android:textColor="@color/colorGrey"
-                android:textStyle="bold"
-                android:textSize="11sp"
-                app:layout_constraintLeft_toLeftOf="@id/activity_recipe_detail_kcal_image"
-                app:layout_constraintRight_toRightOf="@id/activity_recipe_detail_kcal_image"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_kcal_image" />
-
-            <!-- EXPANDABLE VIEW-->
-            <View
-                android:id="@+id/view"
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="@dimen/default_large_margin"
-                android:layout_marginEnd="15dp"
-                android:background="@color/colorAccent"
-                app:layout_constraintTop_toBottomOf="@id/activity_recipe_detail_time_image_text" />
-
-            <ExpandableListView
-                android:id="@+id/expandableListView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginStart="15dp"
-                android:layout_marginTop="@dimen/default_large_margin"
-                android:layout_marginEnd="15dp"
-                android:divider="@android:color/darker_gray"
-                android:dividerHeight="0.5dp"
-                android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
-                app:layout_constraintTop_toBottomOf="@id/view"
-                app:layout_constraintBottom_toTopOf="@id/summaryViewConstraintLayout"/>
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/summaryViewConstraintLayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="15dp"
-                android:layout_marginEnd="15dp"
-                android:background="@color/colorWhite"
-                android:visibility="visible"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/expandableListView">
-
-
-                <TextView
-                    android:id="@+id/summaryTextView"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="24dp"
-                    android:text="@string/recipe_detail_item_recipe_view"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="16sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@id/summaryItemLinearLayout"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <LinearLayout
-                    android:id="@+id/summaryItemLinearLayout"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="12dp"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginBottom="8dp"
-                    android:layout_marginTop="8dp"
-                    android:orientation="vertical"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent" />
-
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </androidx.constraintlayout.widget.ConstraintLayout>
-    </androidx.core.widget.NestedScrollView>
 
 </LinearLayout>
