--- a/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
+++ b/app/src/main/res/layout/item_recipe_detail_list_expandable_item.xml
@@ -2,14 +2,15 @@
 
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/item_recipe_detail_list_expandable_item">
     <TextView
-        android:id="@+id/expandedListItem"
+        android:id="@+id/item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingStart="?android:attr/expandableListPreferredChildPaddingLeft"
-        android:paddingEnd="0dp"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp" />
+        android:layout_marginStart="15dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginTop="5dp"/>
 </LinearLayout>
