--- a/app/src/main/res/layout-sw600dp/fragment_my_ingredients_list.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_my_ingredients_list.xml
@@ -31,7 +31,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/image_arrow"
+        android:id="@+id/imageArrowIng"
         android:layout_width="match_parent"
         android:layout_height="400dp"
         android:layout_gravity="bottom"
@@ -76,7 +76,7 @@
 
     <!-- DECLARING FLOATING ACTION BUTTON -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_button"
+        android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
