--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,7 +49,7 @@
 
 
         <FrameLayout
-            android:id="@+id/animation_view_container"
+            android:id="@+id/loader"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@id/activity_main_bottom_navigation"
