--- a/app/src/main/res/layout/fragment_all_recipes.xml
+++ b/app/src/main/res/layout/fragment_all_recipes.xml
@@ -7,7 +7,8 @@
     android:id="@+id/fragment_ingredient_list_rootview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context="com.inved.freezdge.recipes.ui.AllRecipesFragment">
 
     <TextView
         android:id="@+id/topTextview"
@@ -32,7 +33,7 @@
         android:gravity="center"/>
 
     <ImageView
-        android:id="@+id/image_arrow"
+        android:id="@+id/imageArrow"
         android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_gravity="bottom"
@@ -48,7 +49,7 @@
 
     <!-- DECLARING FLOATING ACTION BUTTON -->
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/floating_button"
+        android:id="@+id/floatingActionButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
