--- a/app/src/main/res/layout/item_social_media.xml
+++ b/app/src/main/res/layout/item_social_media.xml
@@ -25,7 +25,7 @@
         android:paddingBottom="10dp">
 
         <ImageView
-            android:id="@+id/profile_image"
+            android:id="@+id/photoProfile"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/default_large_margin"
@@ -43,9 +43,9 @@
             text:tools="@string/social_media_username_post"
             android:textStyle="bold"
             android:layout_marginStart="@dimen/default_large_margin"
-            app:layout_constraintStart_toEndOf="@id/profile_image"
-            app:layout_constraintTop_toTopOf="@id/profile_image"
-            app:layout_constraintBottom_toBottomOf="@id/profile_image"
+            app:layout_constraintStart_toEndOf="@id/photoProfile"
+            app:layout_constraintTop_toTopOf="@id/photoProfile"
+            app:layout_constraintBottom_toBottomOf="@id/photoProfile"
             android:textColor="@color/colorAccent"
             android:textSize="@dimen/default_text_size" />
 
@@ -72,7 +72,7 @@
             text:tools="@string/recipe_list_item_label"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_image"
+            app:layout_constraintTop_toBottomOf="@id/photoProfile"
             app:layout_constraintRight_toRightOf="parent"/>
 
         <com.like.LikeButton
@@ -91,7 +91,7 @@
             app:anim_scale_factor="2"
             app:is_enabled="true"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="@id/profile_image"
+            app:layout_constraintLeft_toLeftOf="@id/photoProfile"
             app:layout_constraintTop_toBottomOf="@id/image"
             android:layout_marginTop="@dimen/default_large_margin"
             />
